--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,10 @@ input[name='charactername']:focus {
   background-color: plum;
   cursor: pointer;
 }
-
+.main_btn {
+  display: block;
+  margin: 0 auto;
+}
 .header_home {
   position: fixed;
   top: 0;
@@ -201,4 +204,96 @@ input[name='charactername']:focus {
 }
 .profile_loses {
   color: red;
+}
+.fight_conteiner {
+  display: flex;
+
+  justify-content: space-around;
+  align-items: center;
+  margin: 20px;
+}
+.enemy_img {
+  height: 300px;
+  width: 200px;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+}
+.enemy_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.attack_panel_zones {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+.attack_panel p,
+.attack_panel span {
+  color: purple;
+  text-align: center;
+}
+.attack_zones label {
+  color: purple;
+}
+.defence_zones label {
+  color: purple;
+}
+.attack_zones span {
+  margin-bottom: 20px;
+}
+.attack_btn {
+  display: block;
+  margin: 0 auto;
+  background-color: purple;
+  font-size: 30px;
+  padding: 10px 20px;
+  color: aliceblue;
+}
+.edit_btn {
+  padding: 8px 14px;
+  background-color: purple;
+  color: white;
+  border-radius: 4px;
+  border: none;
+}
+.edit_btn:hover {
+  transition: 0.3s ease;
+  background-color: plum;
+}
+.health_bar {
+  position: relative;
+  width: 200px;
+  height: 30px;
+  background: #444;
+  border: 2px solid #222;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+}
+.health_fill {
+  height: 100%;
+  background: linear-gradient(90deg, red, violet);
+  transition: width 0.3s ease-in-out;
+}
+
+.health_text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  color: black;
+  text-shadow: 1px 1px 2px black;
+}
+.log_p {
+  margin-left: 20px;
+  color: black;
+}
+.logs {
+  margin-top: 20px;
+  max-height: 310px;
+  overflow-y: auto;
+  border: 1px solid gray;
 }
